# sithra-rs

./: .gitignore  .tokeignore  Cargo.toml  README.md  justfile  rustfmt.toml
adapters/onebot/: Cargo.toml
adapters/onebot/src/: api.rs  endpoint.rs  event.rs  lib.rs  main.rs  message.rs  util.rs
adapters/sithra-adapter-onebot/: Cargo.toml
adapters/sithra-adapter-onebot/src/: event.rs  main.rs  message.rs
adapters/sithra-onebot/: Cargo.toml
adapters/sithra-onebot/src/: main.rs
adapters/sithra-onebot/static/: config.toml
crates/kit/: Cargo.toml
crates/kit/src/: initialize.rs  layers.rs  lib.rs  logger.rs  plugin.rs  server.rs
crates/kit/src/server/: boxed.rs  extract.rs  multi.rs  request.rs  response.rs  routing.rs
crates/kit/src/server/extract/: from_ref.rs  payload.rs  state.rs
crates/kit/src/server/routing/: endpoint.rs  router.rs  typed.rs
crates/server/: Cargo.toml
crates/server-macros/: Cargo.toml
crates/server-macros/src/: lib.rs
crates/server/examples/: server_a.rs  server_b.rs
crates/server/src/: boxed.rs  extract.rs  handler.rs  lib.rs  multi.rs  request.rs  response.rs  routing.rs  server.rs  service.rs  shared.rs  traits.rs
crates/server/src/extract/: channel.rs  client.rs  context.rs  correlation.rs  payload.rs  state.rs
crates/server/src/routing/: endpoint.rs  route.rs  router.rs  typed.rs
crates/sithra/: Cargo.toml  README.md
crates/sithra-kit/: Cargo.toml
crates/sithra-kit/src/: lib.rs
crates/sithra-kit/src/server/: handler.rs
crates/sithra-kit/src/server/routing/: route.rs  router.rs
crates/sithra/src/: client.rs  conf.rs  config.rs  lib.rs  loader.rs  main.rs  subscribers.rs  util.rs
crates/sithra/src/subscribers/: api.rs  logger.rs  reflect.rs
crates/sithra/static/: config.toml
crates/sithra_common/: Cargo.toml  README.md
crates/sithra_common/src/: api.rs  error.rs  event.rs  global.rs  lib.rs  log.rs  message.rs  message.rs.old  model.rs  state.rs  traits.rs  util.rs
crates/sithra_common/src/api/: data.rs
crates/sithra_common/src/event/: internal.rs  internal.rs.old
crates/sithra_common/src/message/: internal.rs  internal.rs.old
crates/sithra_macro/: Cargo.toml
crates/sithra_macro/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: channel.md  channel.rs  datapack.rs  lib.rs  peer.rs  util.rs
crates/types/: Cargo.toml
crates/types/src/: channel.rs  initialize.rs  lib.rs  log.rs  macros.rs  message.rs
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
examples/game-24p/: Cargo.toml
examples/mc-tools/: Cargo.toml
examples/mc-tools/src/: main.rs  mcmod.rs
examples/search-cratesio/: Cargo.toml
examples/search-cratesio/src/: api.rs  data.rs  error.rs  main.rs
plugins-old/echo/: Cargo.toml
plugins-old/game-24p/src/: main.rs
plugins-old/mc-tools/src/: main.rs
plugins-old/search-cratesio/src/: error.rs  main.rs
plugins/echo/: Cargo.toml
plugins/echo/src/: main.rs
plugins/management-tools/: Cargo.toml
plugins/management-tools/src/: main.rs
plugins/mc-tools/src/: mcmod.rs  skin.rs
plugins/mctools/: Cargo.toml
plugins/mctools/src/: main.rs  skin.rs
sithra-js/: package-lock.json  package.json  rollup.config.ts  tsconfig.json
sithra-js/kit/: package.json  tsconfig.json
sithra-js/kit/src/: index.ts  router.ts  types.ts
sithra-js/transport/: package.json
sithra-js/transport/src/: index.ts  peer.ts  util.ts
sithra-js/transport/src/codec/: index.ts
sithra-js/types/: package.json
sithra-js/types/src/: index.ts  transport.ts  types.ts
