[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]
default-members = ["crates/sithra"]

[workspace.package]
edition = "2024"

[workspace.dependencies]

# Workspace member crates

sithra_common = { path = "crates/sithra_common" }
sithra_macro = { path = "crates/sithra_macro" }

# Extrenal crates

ioevent = { version = "0.1.0-rc.2", git = "https://github.com/BERADQ/ioevent.git" }
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
log = "0.4.27"

# Examples Extrenal crates
reqwest = { version = "0.12.15", features = ["json"] }
scraper = { version = "0.23.1", default-features = false }
sithra_headless_common = { git = "https://github.com/SithraBot/sithra-rs-headless.git" }

[profile.dev]
split-debuginfo = "unpacked"
debug = "limited"
codegen-units = 16

[profile.release]
debug = "limited"
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3
