[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/sithra"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
rmp-serde = { version = "1" }
rmpv = { version = "1", features = ["with-serde"] }
pin-project = { version = "1" }
bytes = { version = "1" }
thiserror = { version = "2" }
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
either = { version = "1" }
tower = { version = "0.5", features = ["full"] }
smallvec = { version = "1", features = ["const_generics"] }
matchit = { version = "0.8" }
triomphe = { version = "0.1" }

# Workspace

sithra-transport = { path = "crates/transport" }
sithra-types = { path = "crates/types" }
sithra-server = { path = "crates/server" }
sithra-kit = { path = "crates/kit" }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

type_complexity = "allow"
option_if_let_else = "allow"

await_holding_lock = "warn"
dbg_macro = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
needless_borrow = "warn"
needless_continue = "warn"
option_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
verbose_file_reads = "warn"

[profile.dev]
split-debuginfo = "unpacked"
debug = "limited"
codegen-units = 16

[profile.release]
debug = "limited"
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3
