[package]
name = "sithra_common"
version = "0.1.0"
edition.workspace = true

[dependencies]

# Extrenal crates

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ioevent.workspace = true
tokio.workspace = true
sithra_macro.workspace = true
log.workspace = true
micromap = { version = "0.0.19", features = ["serde"] }
