[package]
name = "mc-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
ioevent.workspace = true
tokio.workspace = true
sithra_common.workspace = true
log.workspace = true
reqwest = "0.12.15"
bytes = "1.10.1"
base64 = "0.22.1"
scraper = { version = "0.23.1", default-features = false }
thiserror.workspace = true
