[package]
name = "mc-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
ioevent.workspace = true
tokio.workspace = true
sithra_common.workspace = true
log.workspace = true
thiserror.workspace = true
reqwest.workspace = true
scraper.workspace = true
sithra_headless_common.workspace = true
bytes = "1.10.1"
base64 = "0.22.1"