[package]
name = "search-cratesio"
version = "0.1.0"
edition.workspace = true

[dependencies]
ioevent.workspace = true
tokio.workspace = true
sithra_common.workspace = true
log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
scraper.workspace = true